# HashAxe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: MANUAL.md
hashaxe/: __init__.py  __main__.py  api.py  auto_pwn.py  cli.py  cracker.py  display.py  engine.py  monitor.py  parser.py  session.py  wordlist.py
hashaxe/ai/: __init__.py  adaptive.py  model_manager.py  spiking_engine.py
hashaxe/attacks/: __init__.py  ai_generator.py  combinator.py  hybrid.py  markov.py  mask.py  osint.py  pcfg.py  policy.py  prince.py  wordlist.py
hashaxe/core/: __init__.py  hash_registry.py  normalization.py
hashaxe/cpu/: __init__.py  simd.py  wordfreq.py
hashaxe/db/: __init__.py  export.py  manager.py  schema.py
hashaxe/distributed/: __init__.py  healing.py  ipfs_node.py  master.py  worker.py
hashaxe/formats/: __init__.py  _registry.py  archive_7z.py  archive_rar.py  archive_zip.py  base.py  database_mssql.py  database_mysql.py  database_postgres.py  disk_dpapi.py  document_odf.py  document_pdf.py  encoded_base64.py  hash_argon2.py  hash_bcrypt.py  hash_raw.py  hash_scrypt.py  hash_unix.py  network_cisco_full.py  network_dcc.py  network_kerberos.py  network_ntlm.py  network_wpa.py  pwm_keepass.py  pwm_office.py  ssh_openssh.py  ssh_ppk.py  token_ansible.py  token_jwt.py
hashaxe/fpga/: __init__.py  bridge.py
hashaxe/gpu/: __init__.py  accelerator.py  cuda_kernel.cu  cuda_kernel.cu.new  fast_hash_cracker.py  opencl_kernel.cl
hashaxe/gpu/kernels/: md5.cu  ntlm.cu  sha256.cu
hashaxe/identify/: __init__.py  classifier.py  entropy.py  estimator.py  hash_patterns.py  magic.py  mitre.py  recommender.py  report.py
hashaxe/native/: Cargo.toml  pyproject.toml
hashaxe/native/crack_rules_rs/: Cargo.toml
hashaxe/native/crack_rules_rs/src/: lib.rs
hashaxe/native/crack_wordlist_rs/: Cargo.toml
hashaxe/native/crack_wordlist_rs/src/: lib.rs
hashaxe/native/libcrack_engine/: Makefile  engine.cu
hashaxe/native/src/: lib.rs
hashaxe/osint/: __init__.py  keyword_mutator.py  nlp_engine.py  profiler.py
hashaxe/pqc/: __init__.py  hndl_analyzer.py  scanner.py
hashaxe/quantum/: __init__.py  grover_oracle.py  qiskit_bridge.py
hashaxe/rules/: __init__.py  hashcat.py  mask.py  mutations.py
hashaxe/tui/: __init__.py  app.py
hashaxe/web3/: __init__.py  zk_auditor.py
manual_test_run/: md5_hash.txt  osint_profile.txt  test.jwt  test_words.txt  test_words3.txt
manual_test_run/reports/: batch1_report.md  batch3_report.md  batch4_report.md
test_files/: ansible_vault.txt  argon2id_hash.txt  bcrypt_cost10_hash.txt  bcrypt_cost4_hash.txt  cisco_type5_hash.txt  cisco_type8_hash.txt  cisco_type9_hash.txt  dcc1_hash.txt  dcc2_hash.txt  descrypt_hash.txt  dpapi_v1_hash.txt  dpapi_v2_hash.txt  ecdsa_legacy_abc123.key.pub  jwt_hs256.txt  jwt_hs384.txt  jwt_hs512.txt  kerberos_asrep_rc4.txt  kerberos_tgs_aes128.txt  kerberos_tgs_aes256.txt  kerberos_tgs_rc4.txt  lm_hash.txt  md5crypt_hash.txt  mock_ssh_server.py  mssql_hash.txt  mysql_hash.txt  netntlmv1_hash.txt  netntlmv2_hash.txt  password.txt  postgres_hash_hashcat.txt  postgres_hash_john.txt  rsa_legacy_nopass.key.pub  rsa_legacy_puppet.key.pub  scrypt_hash.txt  sha256crypt_hash.txt  sha384.txt  sha512crypt_hash.txt  test.kdbx  test_encrypted.7z  test_encrypted.docx  test_encrypted.odt  (+6 more)
test_scripts/: deploy_aws.py  file_10_ssh_verification.sh  file_11_advanced_options.sh  file_11_benchmark_estimate.sh  file_12_combo.sh  file_13_auto_pwn.sh  file_14_ai_generation.sh  file_14_database_management.sh  file_16_prince_attacks.sh  file_17_policy_attacks.sh  file_17_tui_dashboard.sh  file_19_markov_attacks.sh  file_1_basic_operation_info_commands.sh  file_20_pcfg_attacks.sh  file_21_osint_profiling.sh  file_2_wordlist_attacks_commands.sh  file_3_verbose_output.sh  file_4_mask_attack.sh  file_5_rules_attack.sh  file_6_hybrid_attacks.sh  file_7_session_management.sh  file_8_gpu_acceleration.sh  file_9_distributed_cracking.sh  hashaxe_lib.sh  test_advanced_modules.py  test_ai_output.py
tests/: test_all.py  test_archives.py  test_attacks.py  test_audit_remediation.py  test_auto_pwn_api_tui.py  test_batch1.py  test_batch2.py  test_batch3.py  test_batch4.py  test_core_normalization.py  test_db.py  test_estimator_report.py  test_formats.py  test_fpga_bridge.py  test_identify.py  test_intelligence.py  test_monitor_healing.py  test_network_db.py  test_osint.py  test_pcfg_ai.py  test_pipeline_integrity.py  test_pqc_scanner.py  test_quantum_bridge.py  test_t1_formats.py  test_t2_formats.py  test_v4_advanced.py  test_web3_zk_auditor.py
tests/fixtures/: test_header.7z
tests/keys/: ecdsa_legacy_abc123.key.pub  rsa_legacy_nopass.key.pub  rsa_legacy_puppet.key.pub
