[package]
name = "hashaxe_native"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for CRACK password cracker"

[lib]
name = "hashaxe_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
memchr = "2"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
